name:                grant-calendar
version:             0.1.0.0
synopsis:            Calendar for arts-related grants and events
homepage:            https://github.com/thecultureulterior/grant-calendar
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014 Sharif Olorin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable grant-calendar
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       snap
  default-language:    Haskell2010
  hs-src-dirs:         src
